Fixed bug #42819 (namespaces in indexes of constant arrays)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@243361 c90b9560-bf6c-de11-be94-00142212c4b1