Zend/zend_vm_def.h
@@ -2759,7 +2759,7 @@ ZEND_VM_HANDLER(99, ZEND_FETCH_CONSTANT, VAR|UNUSED|CONST, CONST)
 
 		if (zend_u_hash_find(&ce->constants_table, Z_TYPE(opline->op2.u.constant), Z_UNIVAL(opline->op2.u.constant), Z_UNILEN(opline->op2.u.constant)+1, (void **) &value) == SUCCESS) {
 			if (Z_TYPE_PP(value) == IS_CONSTANT_ARRAY ||
-			    Z_TYPE_PP(value) == IS_CONSTANT) {
+			    (Z_TYPE_PP(value) & IS_CONSTANT_TYPE_MASK) == IS_CONSTANT) {
 				zend_class_entry *old_scope = EG(scope);
 
 				EG(scope) = ce;
